The Italic Formatting Tags: <i> and <em>

--- a/HTML Tags Bold, Italic, Underline, and Strikethrough/index.html
+++ b/HTML Tags Bold, Italic, Underline, and Strikethrough/index.html
@@ -3,3 +3,11 @@
 or
 
 <strong>This text will be bold using strong tag</strong>
+
+<br />
+
+<i>This text will be italicized using i tag</i>
+
+or
+
+<em>This text will be italicized using em tag</em>
