The Underline Formatting Tags: <u> and <ins>

--- a/HTML Tags Bold, Italic, Underline, and Strikethrough/index.html
+++ b/HTML Tags Bold, Italic, Underline, and Strikethrough/index.html
@@ -11,3 +11,11 @@ or
 or
 
 <em>This text will be italicized using em tag</em>
+
+<br />
+
+<u>This text will be underlined using u tag </u>
+
+or
+
+<ins>This text will be underlined using ins tag </ins>
