The Strikethrough Formatting Tags: <del> and <s>

--- a/HTML Tags Bold, Italic, Underline, and Strikethrough/index.html
+++ b/HTML Tags Bold, Italic, Underline, and Strikethrough/index.html
@@ -19,3 +19,11 @@ or
 or
 
 <ins>This text will be underlined using ins tag </ins>
+
+<br />
+
+<del>This text will be strikethrough using del tag</del>
+
+or
+
+<s>This text will be strikethrough using s tag</s>
