--- a/Mastering Lists in HTML/index.html
+++ b/Mastering Lists in HTML/index.html
@@ -9,3 +9,16 @@
   <li>HTML</li>
   <li>Contact</li>
 </ol>
+
+<ul>
+  <li>Home</li>
+  <li>HTML</li>
+  <li>
+    Problems
+    <ol>
+      <li>Leet Code</li>
+      <li>HackerRank</li>
+    </ol>
+  </li>
+  <li>Contact</li>
+</ul>
