Table Stucture with colspan and rowspan
Table Stucture with colspan and rowspan

Co-Authored-By: Mohammad Moiz Ali <38657358+makstyle119@users.noreply.github.com>

--- a/Mastering HTML Tables/index.html
+++ b/Mastering HTML Tables/index.html
@@ -8,3 +8,16 @@
     <td>Data 2</td>
   </tr>
 </table>
+
+<table>
+  <tr>
+    <th colspan="2">Header 1 and Header 2</th>
+  </tr>
+  <tr>
+    <td rowspan="2">Data 1</td>
+    <td>Data 2</td>
+  </tr>
+  <tr>
+    <td>Data 3</td>
+  </tr>
+</table>
