--- a/Mastering HTML Tables/index.html
+++ b/Mastering HTML Tables/index.html
@@ -21,3 +21,16 @@
     <td>Data 3</td>
   </tr>
 </table>
+
+<table>
+  <tr>
+    <th align="left">Name</th>
+    <th align="center">Age</th>
+    <th align="right">City</th>
+  </tr>
+  <tr>
+    <td>John Doe</td>
+    <td>25</td>
+    <td>New York</td>
+  </tr>
+</table>
