Applying Background Colors
Applying Background Colors

Co-Authored-By: Mohammad Moiz Ali <38657358+makstyle119@users.noreply.github.com>

--- a/Mastering HTML Tables/index.html
+++ b/Mastering HTML Tables/index.html
@@ -34,3 +34,16 @@
     <td>New York</td>
   </tr>
 </table>
+
+<table>
+  <tr>
+    <th bgcolor="#f2f2f2">Name</th>
+    <th bgcolor="#f2f2f2">Age</th>
+    <th bgcolor="#f2f2f2">City</th>
+  </tr>
+  <tr>
+    <td>John Doe</td>
+    <td>25</td>
+    <td>New York</td>
+  </tr>
+</table>
