Setting Cell Padding and Borders:
Setting Cell Padding and Borders:

Co-Authored-By: Mohammad Moiz Ali <38657358+makstyle119@users.noreply.github.com>

--- a/Mastering HTML Tables/index.html
+++ b/Mastering HTML Tables/index.html
@@ -47,3 +47,16 @@
     <td>New York</td>
   </tr>
 </table>
+
+<table border="1" cellpadding="10">
+  <tr>
+    <th>Name</th>
+    <th>Age</th>
+    <th>City</th>
+  </tr>
+  <tr>
+    <td>John Doe</td>
+    <td>25</td>
+    <td>New York</td>
+  </tr>
+</table>
