--- a/Mastering HTML Comments/index.html
+++ b/Mastering HTML Comments/index.html
@@ -1,3 +1,5 @@
 <!-- ====================
     Section 1: Introduction
 ===================== -->
+
+<!-- Calculate the total price by multiplying quantity and unit price -->
