TODOs and Future Improvements:
TODOs and Future Improvements:

Co-Authored-By: Mohammad Moiz Ali <38657358+makstyle119@users.noreply.github.com>

--- a/Mastering HTML Comments/index.html
+++ b/Mastering HTML Comments/index.html
@@ -3,3 +3,5 @@
 ===================== -->
 
 <!-- Calculate the total price by multiplying quantity and unit price -->
+
+<!-- TODO: Implement validation for user inputs -->
