--- a/Mastering HTML Comments/index.html
+++ b/Mastering HTML Comments/index.html
@@ -5,3 +5,5 @@
 <!-- Calculate the total price by multiplying quantity and unit price -->
 
 <!-- TODO: Implement validation for user inputs -->
+
+<!-- DEBUG: Console.log output for debugging -->
